Fix layout issues to make sure there are clear 8px dividers

--- a/src/ui/components/SecondaryToolbox/SecondaryToolbox.css
+++ b/src/ui/components/SecondaryToolbox/SecondaryToolbox.css
@@ -21,7 +21,7 @@
 }
 
 .secondary-toolbox-header button.toolbox-options {
-  padding-right: 5px;
+  padding: 8px;
 }
 
 .secondary-toolbox-header button {
